# Nematostella-time-series

./: .gitignore  .pre-commit-config.yaml  404.html  CALIBRATION_GUIDE.md  CALIBRATION_IR_MINIMUM_CONSTRAINT.md  CAMERA_INTEGRATION_FIX.md  CAMERA_LAYER_FIX.md  CHANGELOG.md  ESP32_BUFFER_FIX.md  EXPOSURE_TRACKING_IMPLEMENTATION.md  IMSWITCH_CAMERA_FIX.md  LICENSE  MKDOCS_SETUP.md  MULTI_CAMERA_DESIGN.md  MULTI_CAMERA_GUI_INTEGRATION.md  MULTI_CAMERA_USAGE.md  NAPARI_LAYER_SOLUTION.md  Nematostella_circadian_cycle.md  PER_PHASE_CALIBRATION_GUIDE.md  PHASE_TIMING_FIX.md  README.md  TEMPERATURE_CALIBRATION.md  TIMING_OPTIMIZATION_CHANGES.md  analyze_intensity_match.py  camera_system_example.json  check_exposure_settings.py  diagnose_recording_config.py  hdf5_timeseries_plotter_v2.py  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml  test_multi_camera.py  tox.ini
.claude/: settings.local.json
.devtools/: settings.local.json
.github/workflows/: deploy_docs.yml  firmware_build.yml  render_stl_previews.yml
3D_Druck/: Mosfet cable.stp  index.html
3D_Druck/STL/: Achse_10mm.stl  Lid_Mount_Darkfieldillumination_with_guide.stl  Mosfet_cable.stl  Mosfet_case_lid.stl  NematostellaImager_mirrormount.stl  NematostellaImager_v0.stl  blenden_lang.stl
ESP32-S3-BOX-3_CONFIGURATION/: index.html
Firmware/: FIRMWARE_DOCUMENTATION.md  QUICK_START_GUIDE.md
Firmware/LED_Nematostella/: README_FLASH.md  platformio.ini
Firmware/LED_Nematostella/src/: main.cpp
Json+cam_manager/: HikCamManager.py  example_uc2_ddorf_hik_imager_IR.json  hikcamera.py
analysis/: index.html
analysis/avi-integration/: index.html
analysis/circadian-analysis/: index.html
analysis/extended-analysis/: index.html
analysis/performance/: index.html
analysis/user-guide/: index.html
changelog/: index.html
circadian/: index.html
docs/: Achse_10mm.stp  Cam_mount_2.stp  ESP32-S3-BOX-3_CONFIGURATION.md  Extension_neu.stp  Mirror_cutting_template.stp  Mosfet cable.stp  Mosfet_case.stp  Mosfet_case_lid.stp  NematostellaImager_mirrormount.stp  NematostellaImager_v0.stp  Puzzleteil_rail_extension_circle_lock.stp  Streulichtschutz.stp  Wellplate_Mount_Darkfieldillumination_rail_kopie.stp  blenden_kurz_links.stp  blenden_lang.stp  blenden_lang_dht22.stp  hardware.md  index.html  index.md  installer.html  recording.md
docs/3D_Druck/: Achse_10mm.stp  Cam_Mount.3mf  Cam_mount_2.stp  Extension_neu.stp  Lid_Mount_Darkfieldillumination_with_guide.stp  Magnetic_LED-Rail2_kurz.stp  Magnetic_LED-Rail_wiring_exit.stp  Magnetic_LED-Rail_without_wiring_exit.stp  Mirror_cutting_template.stp  Mosfet_case.stp  Mosfet_case_lid.stp  NematostellaImager_mirrormount.stp  NematostellaImager_v0.stp  Puzzleteil_rail_extension_circle_lock.stp  README.md  Streulichtschutz.stp  Wellplate_Mount_Darkfieldillumination_rail_kopie.stp  blenden_kurz_links.stp  blenden_lang.stp  blenden_lang_dht22.stp
docs/3D_Druck/STL/: Cam_Mount.stl  Extension_neu.stl  Magnetic_LED-Rail2_kurz.stl  Magnetic_LED-Rail_wiring_exit.stl  Magnetic_LED-Rail_without_wiring_exit.stl  Mirror_cutting_template.stl  Mosfet_case.stl  Puzzleteil_rail_extension_circle_lock.stl  Streulichtschutz.stl  Wellplate_Mount_Darkfieldillumination_rail_kopie.stl  blenden_kurz_links.stl  blenden_lang_dht22.stl
docs/analysis/: entrainment-protocol.md  index.md
docs/firmware/: manifest_esp32-s3-box-3.json  manifest_esp32dev.json
docs/images/: README.md
docs/javascripts/: stl-viewer.js
docs/stylesheets/: extra.css
hardware/: index.html
images/: index.html
overrides/: main.html
recording/: index.html
scripts/: render_stl_previews.py  sync_docs.py  test_zero_frame_unit.py  timing_simulation.py
search/: search_index.json
src/.claude/: settings.local.json
src/timeseries_capture/: __init__.py  _widget.py  camera_adapters.py  esp32_gui_controller.py  main_widget.py  napari.yaml  recording_controller.py
src/timeseries_capture/Analysis/: __init__.py  live_analysis_worker.py  roi_detector.py
src/timeseries_capture/Backup/: __init__.py  _widget.py  capture_controller.py  esp32_controller.py  hik_camera_thread.py  main_plugin.py  napari.yaml  pyproject.toml  recording_manager.py
src/timeseries_capture/Backup3/: _data_manager.py  _esp32_controller.py  _recorder.py  _widget.py
src/timeseries_capture/Backup_2/: __init__.py  _data_manager.py  _esp32_controller.py  _recorder.py  _widget.py  napari.yaml
src/timeseries_capture/Config/: __init__.py  camera_system_config.py
src/timeseries_capture/Datamanager/: __init__.py  data_manager_hdf5.py  data_manager_zarr.py
src/timeseries_capture/ESP32_Controller/: __init__.py  esp32_commands.py  esp32_communication.py  esp32_connection_diagnostic.py  esp32_controller.py  esp32_state.py
src/timeseries_capture/GUI/: __init__.py  camera_connection_panel.py  camera_selection_panel.py  dummy_camera_adapter.py  esp32_connection_panel.py  experiment_designer.py  led_control_panel.py  live_analysis_panel.py  log_panel.py  multi_camera_status_panel.py  phase_panel.py  recording_panel.py  status_panel.py  test_gui_standalone.py
src/timeseries_capture/MvImport/: CameraParams_const.py  CameraParams_header.py  MvCameraControl_class.py  MvErrorDefine_const.py  PixelType_header.py  __init__.py
src/timeseries_capture/Recorder/: __init__.py  calibration_service.py  camera_recording_unit.py  frame_capture.py  multi_camera_controller.py  phase_manager.py  recording_manager.py  recording_state.py  schedule_manager.py
src/timeseries_capture/_tests/: test_widget.py
stylesheets/: extra.css
