[project]
name = "nematostella-time-series"
dynamic = ["version"]
description = "A simple tool to capture a timeseries of frames"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "s1alknau", email = "akknauss@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5",
    "pyserial>=3.5",
]

[project.entry-points."napari.manifest"]
nematostella-time-series = "timeseries_capture:napari.yaml"



[project.urls]
"Bug Tracker" = "https://github.com/s1alknau/nematostella-time-series/issues"
"Documentation" = "https://github.com/s1alknau/nematostella-time-series#README.md"
"Source Code" = "https://github.com/s1alknau/nematostella-time-series"
"User Support" = "https://github.com/s1alknau/nematostella-time-series/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "timeseries_capture.__init__.__version__"}

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W",
    "UP",
    "I",
    "BLE",
    "B",
    "A",
    "C4",
    "ISC",
    "G",
    "PIE",
    "SIM",
]
lint.ignore = [
    "E501",
    "UP006", "UP007",
    "SIM117",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
