[project]
name = "nematostella-time-series"
dynamic = ["version"]
description = "Professional time-lapse microscopy with ESP32 LED synchronization for napari"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "s1alknau", email = "akknauss@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "napari>=0.4.16",
    "napari-plugin-engine>=0.1.4",
    "qtpy",
    "h5py>=3.0",
    "opencv-python",
    "pyserial>=3.5",
]

[project.optional-dependencies]
hik = [
    "hikrobotcamlib",  # HIK camera support
]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "pytest-mock",
    "napari[all]",
    "pyqt5",
]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "ipython",
    "jupyter",
]
all = [
    "nematostella-time-series[hik,testing,dev]",
]

[project.entry-points."napari.manifest"]
nematostella-time-series = "timeseries_capture:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/s1alknau/nematostella-time-series/issues"
"Documentation" = "https://github.com/s1alknau/nematostella-time-series#README.md"
"Source Code" = "https://github.com/s1alknau/nematostella-time-series"
"User Support" = "https://github.com/s1alknau/nematostella-time-series/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
"timeseries_capture" = ["napari.yaml"]

[tool.setuptools.dynamic]
version = {attr = "timeseries_capture.__init__.__version__"}

# Code formatting
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Linting
[tool.ruff]
line-length = 88
lint.select = [
    "E", "F", "W",     # flake8
    "UP",              # pyupgrade
    "I",               # isort
    "BLE",             # flake8-blind-except
    "B",               # flake8-bugbear
    "A",               # flake8-builtins
    "C4",              # flake8-comprehensions
    "ISC",             # flake8-implicit-str-concat
    "G",               # flake8-logging-format
    "PIE",             # flake8-pie
    "SIM",             # flake8-simplify
    "NPY",             # NumPy-specific rules
]
lint.ignore = [
    "E501",    # line too long (handled by black)
    "UP006",   # use-pep585-annotation
    "UP007",   # use-pep604-annotation
    "SIM117",  # use-single-with-statement
    "B008",    # function-call-in-default-argument
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py39"
fix = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["S101"]

# Testing
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gui: marks tests that require Qt GUI",
]

# Type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "napari.*",
    "cv2.*",
    "h5py.*",
    "serial.*",
    "hikrobotcamlib.*",
]
ignore_missing_imports = true

# Coverage
[tool.coverage.run]
source = ["timeseries_capture"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
